<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/center_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_test_middle" />

    <Button
        android:id="@+id/right_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_test_right_in" />

    <Button
        android:id="@+id/left_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_test_left" />

    <Button
        android:id="@+id/bottom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_test_bottom" />

    <Button
        android:id="@+id/top_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_test_top" />

</LinearLayout>