<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            tools:text="阿萨德撒到静安寺定级赛噢诶据权威" />
    </ScrollView>

    <EditText
        android:id="@+id/input_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/security_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/aes_init_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_AES_init"
            android:textSize="13sp" />

        <Button
            android:id="@+id/aes_encrypt_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_AES_encrypt"
            android:textSize="13sp" />

        <Button
            android:id="@+id/aes_decrypt_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_AES_decrypt"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rsa_init_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_RSA_init"
            android:textSize="13sp" />

        <Button
            android:id="@+id/rsa_encrypt_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_RSA_encrypt"
            android:textSize="13sp" />

        <Button
            android:id="@+id/rsa_decrypt_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_RSA_decrypt"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/md5_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_MD5_btn"
            android:textSize="13sp" />

        <Button
            android:id="@+id/sha1_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_SHA1_btn"
            android:textSize="13sp" />

        <Button
            android:id="@+id/clean_btn"
            style="?android:attr/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_clean"
            android:textSize="13sp" />

    </LinearLayout>


</LinearLayout>