<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/linear_btn"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_f0f0f0_stroke_cccccc"
        android:gravity="center"
        android:text="@string/drag_linear_layout_manager"
        android:textColor="@color/color_9a9a9a"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/grid_btn"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_f0f0f0_stroke_cccccc"
        android:gravity="center"
        android:text="@string/drag_grid_layout_manager"
        android:textColor="@color/color_9a9a9a"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/staggered_btn"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_f0f0f0_stroke_cccccc"
        android:gravity="center"
        android:text="@string/drag_staggered_grid_layout_manager"
        android:textColor="@color/color_9a9a9a"
        android:textSize="16sp" />

</LinearLayout>